--- a/index.html
+++ b/index.html
@@ -11,6 +11,41 @@
   <body>
     <div class = "calc-container">
         <div class = "display"></div>
+        
+        <div id = "buttons-container">
+          <div class = "column-1">
+            <button>7</button>
+            <button>4</button>
+            <button>1</button>
+            <button>C</button>
+          </div>
+
+          <div class = "column-2">
+            <button>8</button>
+            <button>5</button>
+            <button>2</button>
+            <button>0</button>
+          </div>
+          <div class = "column-3">
+            <button>9</button>
+            <button>6</button>
+            <button>3</button>
+            <button>.</button>
+          </div>
+          <div class = "column-4">
+            <button>+/-</button>
+            <button>X</button>
+            <button>-</button>
+            <button>+</button>
+          </div>
+          <div class = "column-5">
+            <button>-></button>
+            <button>/</button>
+            <button>=</button>
+          </div>
+
+
+        </div>
     </div>
     <script src="calc.js"></script>
   </body>
