--- a/index.html
+++ b/index.html
@@ -13,38 +13,34 @@
         <div class = "display"></div>
         
         <div id = "buttons-container">
-          <div class = "column-1">
+          <div class = "row-1">
             <button>7</button>
-            <button>4</button>
-            <button>1</button>
-            <button>C</button>
+            <button>8</button>
+            <button>9</button>
+            <button>±</button>
+            <button>→</button>
           </div>
 
-          <div class = "column-2">
-            <button>8</button>
+          <div class = "row-2">
+            <button>4</button>
             <button>5</button>
-            <button>2</button>
-            <button>0</button>
-          </div>
-          <div class = "column-3">
-            <button>9</button>
             <button>6</button>
-            <button>3</button>
-            <button>.</button>
-          </div>
-          <div class = "column-4">
-            <button>+/-</button>
             <button>X</button>
+            <button>÷</button>
+          </div>
+          <div class = "row-3">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
             <button>-</button>
+            <button class = "equalSign">=</button>
+          </div>
+          <div class = "row-4">
+            <button>C</button>
+            <button>0</button>
+            <button>.</button>
             <button>+</button>
           </div>
-          <div class = "column-5">
-            <button>-></button>
-            <button>/</button>
-            <button>=</button>
-          </div>
-
-
         </div>
     </div>
     <script src="calc.js"></script>
