--- a/index.html
+++ b/index.html
@@ -13,33 +13,35 @@
         <div class = "display"></div>
         
         <div id = "buttons-container">
-          <div class = "row-1">
+          <div class = "column">
             <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>±</button>
-            <button>→</button>
+            <button>4</button>
+            <button>1</button>
+            <button>C</button>
           </div>
 
-          <div class = "row-2">
-            <button>4</button>
+          <div class = "column">
+            <button>8</button>
             <button>5</button>
-            <button>6</button>
-            <button>X</button>
-            <button>÷</button>
-          </div>
-          <div class = "row-3">
-            <button>1</button>
             <button>2</button>
-            <button>3</button>
-            <button>-</button>
-            <button class = "equalSign">=</button>
-          </div>
-          <div class = "row-4">
-            <button>C</button>
             <button>0</button>
+          </div>
+          <div class = "column">
+            <button>9</button>
+            <button>6</button>
+            <button>3</button>
             <button>.</button>
+          </div>
+          <div class = "column">
+            <button>±</button>
+            <button>X</button>
+            <button>-</button>
             <button>+</button>
+          </div>
+          <div class = "column">
+            <button>→</button>
+            <button>÷</button>
+            <button class ="equalSign">=</button>
           </div>
         </div>
     </div>
