--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
         
         <div id = "buttons-container">
           <div class = "column">
-            <button>7</button>
-            <button>4</button>
-            <button>1</button>
-            <button>C</button>
+            <button class = "number">7</button>
+            <button class = "number">4</button>
+            <button class = "number">1</button>
+            <button class = "clear">C</button>
           </div>
 
           <div class = "column">
-            <button>8</button>
-            <button>5</button>
-            <button>2</button>
-            <button>0</button>
+            <button class = "number">8</button>
+            <button class = "number">5</button>
+            <button class = "number">2</button>
+            <button class = "number">0</button>
           </div>
           <div class = "column">
-            <button>9</button>
-            <button>6</button>
-            <button>3</button>
-            <button>.</button>
+            <button class = "number">9</button>
+            <button class = "number">6</button>
+            <button class = "number">3</button>
+            <button class = "number">.</button>
           </div>
           <div class = "column">
-            <button>±</button>
-            <button>X</button>
-            <button>-</button>
-            <button>+</button>
+            <button class ="plusMinus">±</button>
+            <button class = "operation">X</button>
+            <button class = "operation">-</button>
+            <button class = "operation">+</button>
           </div>
           <div class = "column">
-            <button>→</button>
-            <button>÷</button>
+            <button class = "backspace">→</button>
+            <button class = "division">÷</button>
             <button class ="equalSign">=</button>
           </div>
         </div>
