--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div id = "buttons-container">
           <div class = "column">
-            <button class = "number">7</button>
+            <button id = "seven" class = "number">7</button>
             <button class = "number">4</button>
             <button class = "number">1</button>
             <button class = "clear">C</button>
