--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <div id = "buttons-container">
           <div class = "column">
             <button id = "seven" class = "number">7</button>
-            <button class = "number">4</button>
-            <button class = "number">1</button>
+            <button id = "four" class = "number">4</button>
+            <button id = "one" class = "number">1</button>
             <button class = "clear">C</button>
           </div>
 
           <div class = "column">
-            <button class = "number">8</button>
-            <button class = "number">5</button>
-            <button class = "number">2</button>
-            <button class = "number">0</button>
+            <button id = "eight" class = "number">8</button>
+            <button id = "five" class = "number">5</button>
+            <button id = "two" class = "number">2</button>
+            <button id = "zero" class = "number">0</button>
           </div>
           <div class = "column">
-            <button class = "number">9</button>
-            <button class = "number">6</button>
-            <button class = "number">3</button>
-            <button class = "number">.</button>
+            <button id = "nine" class = "number">9</button>
+            <button id = "six" class = "number">6</button>
+            <button id = "three" class = "number">3</button>
+            <button id = "dot" class = "number">.</button>
           </div>
           <div class = "column">
             <button class ="plusMinus">±</button>
