--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           </div>
           <div class = "column">
             <button class ="plusMinus">±</button>
-            <button class = "operation">X</button>
-            <button class = "operation">-</button>
-            <button class = "operation">+</button>
+            <button id = "multiplication" class = "operation">X</button>
+            <button id = "subtraction" class = "operation">-</button>
+            <button id = "addition" class = "operation">+</button>
           </div>
           <div class = "column">
             <button class = "backspace">→</button>
-            <button class = "division">÷</button>
-            <button class ="equalSign">=</button>
+            <button id = "division" class = "division">÷</button>
+            <button id = "equal" class ="equalSign">=</button>
           </div>
         </div>
     </div>
